@@ -18,6 +18,7 @@
 	<properties>
 		<java.version>22</java.version>
 		<graalvm.version>22.0.0</graalvm.version>
+		<maven.compiler.arg>-parameters</maven.compiler.arg>
 		<maven.compiler.args>--add-opens=java.base/java.lang=ALL-UNNAMED</maven.compiler.args>
 		<maven.compiler.args>--add-opens=java.base/java.util=ALL-UNNAMED</maven.compiler.args>
 	</properties>
@@ -115,15 +116,52 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.13.0</version>
 				<configuration>
-					<compilerArgs>
-						<arg>-parameters</arg>
-						<arg>--add-opens=java.base/java.lang=ALL-UNNAMED</arg>
-						<arg>--add-opens=java.base/java.util=ALL-UNNAMED</arg>
-					</compilerArgs>
 					<release>${java.version}</release>
 					<compilerId>javac</compilerId>
 					<fork>true</fork>
 				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+
+				<configuration>
+					<argLine>-javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar</argLine>
+					<argLine>-XX:+EnableDynamicAgentLoading</argLine>
+				</configuration>
+
+			</plugin>
+
+			<!-- Aggiunta del plugin Checkstyle -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<version>3.2.1</version>
+				<configuration>
+					<failsOnError>false</failsOnError>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>check</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<!-- Aggiunta del plugin SpotBugs -->
+			<plugin>
+				<groupId>com.github.spotbugs</groupId>
+				<artifactId>spotbugs-maven-plugin</artifactId>
+				<version>4.7.3</version>
+				<dependencies>
+					<dependency>
+						<groupId>com.github.spotbugs</groupId>
+						<artifactId>spotbugs</artifactId>
+						<version>4.7.3</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 
 			<plugin>
@@ -133,5 +171,22 @@
 
 		</plugins>
 	</build>
+
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<version>3.2.1</version>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<report>checkstyle</report>
+						</reports>
+					</reportSet>
+				</reportSets>
+			</plugin>
+		</plugins>
+	</reporting>
 
 </project>
